# INT-ACT

./: .gitignore  .gitmodules  README.md  README_pose_annotation.md  affordance_usage_guide.py  affordance_wrapper.py  config.yaml  cpu_activate_singularity.sh  demo_affordance.py  example_train.py  explore.py  fix.py  fix.sh  get_pose_corrected_coordinates.py  get_robot_pose_demo.py  gpu_activate_singularity.sh  pose_annotation_example.py  pyproject.toml  run_affordance_test.sh  run_pi0_simpler_local.py  run_pi0_simpler_raw.py  run_pi0_simpler_standalone.py  run_pi0_with_affordance.py  sapien_mock.py  set_path.sh  simple_pi0_test.py  test.py  test_enhanced.py  test_object.py  test_observation_structure.py  test_pi0_affordance_integration.py  test_pose_annotation.py  train_lora.py
__MACOSX/: ._README_pose_annotation.md
clash-backup/: README.txt  cache.db  config-backup.yaml  config-new.yaml  config-old-backup.yaml  config.yaml  sync.sh
config/dataset/: bridge_statistics.json  fractal_statistics.json
config/experiment/simpler/: magma_bridge_ev.yaml  magma_bridge_ev_lang1 copy.yaml  magma_bridge_ev_lang2.yaml  magma_bridge_ev_ood.yaml  octo_base_bridge_ev.yaml  octo_small_bridge_ev.yaml  pi0_baseline.yaml  pi0_baseline_bridge_ev.yaml  pi0_baseline_bridge_ev_lang1.yaml  pi0_baseline_bridge_ev_lang2.yaml  pi0_baseline_bridge_ev_ood.yaml  pi0_baseline_freezevlm_ev1.yaml  pi0_baseline_paraphrase_ev1.yaml  pi0_client.yaml  pi0_client_baseline.yaml  pi0_client_with_affordance.yaml  pi0_finetune_bridge_ev.yaml  pi0_finetune_bridge_ev_lang1.yaml  pi0_finetune_bridge_ev_lang2.yaml  pi0_finetune_bridge_ev_ood.yaml  pi0_local_test.yaml  pi0_rephrase_ft_bridge_ev1.yaml  pi0_server.yaml  pi0_server_baseline.yaml  pi0_server_with_affordance.yaml  pi0_with_affordance.yaml  spatialvla_finetune_bridge_ev.yaml  spatialvla_finetune_bridge_ev_lang1.yaml  spatialvla_finetune_bridge_ev_lang2.yaml  spatialvla_finetune_bridge_ev_ood.yaml
config/experiment/simplerMS3/: pi0_baseline_bridge_ev.yaml  pi0_finetune_bridge_ev.yaml  pi0fast_finetune_bridge_ev.yaml
config/models/: hf_pi0.json  magma.json  octo.json  pi0_baseline_bridge.json  pi0_baseline_fractal.json  pi0_finetune_bridge.json  pi0fast_baseline_bridge.json  pi0fast_finetune_bridge.json  spatialvla_finetune_bridge.json
config/train/: pi0_baseline_bridge.yaml  pi0_baseline_bridge_freezevlm.yaml  pi0_baseline_bridge_paraphrase.yaml  pi0_baseline_fractal.yaml  pi0_finetune_bridge.yaml  pi0_finetune_bridge_paraphrase.yaml
doc/: evaluation.md  evaluation_local_conda.md  quick_start_evaluation.md  training_finetuning.md
scripts/dataset/: modify_rlds_dataset.py  rename_rlds.sh  rlds2lerobot.py  test_lerobot_dataset.py  test_rlds_dataset.py
scripts/eval/: experiment_vis.py  gather_data_delta.py  gather_data_to_csv.py  gather_data_to_wandb.py  get_eval_obj_bbox.py  test_evaluator.sh
scripts/training/: test_nyu_training.sh
slurms/dataset_scripts/: convert_proprio.sh  resize_jpeg.sh  rlds2lerobot.sh  test_rlds_dataset.sh
slurms/eval_scripts/simpler/: ev_baselinepi0_bridge_lang1_simpler.sh  ev_baselinepi0_bridge_lang2_simple.sh  ev_baselinepi0_bridge_ood_simpler.sh  ev_baselinepi0_bridge_simpler.sh  ev_baselinepi0_freezevlm_bridge_simpler_1.sh  ev_baselinepi0_rephrase_bridge_simpler_1.sh  ev_magma_bridge_lang1_simpler.sh  ev_magma_bridge_lang2_simpler.sh  ev_magma_bridge_ood_simpler.sh  ev_magma_bridge_simpler.sh  ev_octo_base_bridge_simpler.sh  ev_octo_small_bridge_simpler.sh  ev_pi0_bridge_lang1_simpler.sh  ev_pi0_bridge_lang2_simpler.sh  ev_pi0_bridge_ood_simpler.sh  ev_pi0_bridge_simpler.sh  ev_pi0_bridge_simpler_local.sh  ev_pi0_rephrase_ft_bridge_simpler_part1.sh  ev_spatialvla_bridge_lang1_simpler.sh  ev_spatialvla_bridge_lang2_simpler.sh  ev_spatialvla_bridge_ood_simpler.sh  ev_spatialvla_bridge_simpler.sh  humanoid_pi0_eval.sh  set_path.sh
slurms/train_scripts/: check_paligemma_model.sh  debug.sh  humanoid_pi0_ft.sh  humanoid_set_path.sh  pi0_baseline_bridge.sh  pi0_baseline_fractal.sh  pi0_baseline_freezevlm_bridge.sh  pi0_baseline_rephrase_bridge.sh  pi0_finetune_bridge.sh  pi0_finetune_bridge_paraphrase.sh  single_gpu.sh
src/: __init__.py
src/INT_ACT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent/: configuration_pipeline.py  dataset.py  run.py  trainer.py
src/data/: obs_transforms.py  rlds_dataset.py  rlds_dataset_torch.py  traj_transforms.py
src/data/dlimp/: __init__.py  augmentations.py  dataset.py
src/data/dlimp/transforms/: __init__.py  common.py  frame_transforms.py
src/data/oxe/: __init__.py  oxe_dataset_configs.py  oxe_dataset_mixes.py  oxe_standardization_transforms.py
src/data/oxe/preprocess/: mod_functions.py  multithreaded_adhoc_tfds_builder.py
src/data/utils/: data_utils.py  goal_relabeling.py  task_augmentation.py  text_processing.py
src/experiments/env_adapters/: base.py  language_mapper.py  libero.py  simpler.py  simpler.py.backup  simplerMS3.py  simpler_with_affordance.py
src/experiments/envs/: base_evaluator.py
src/experiments/envs/libero/: libero_evaluator.py  pyproject.toml
src/experiments/envs/simpler/: pyproject.toml  simpler_evaluator.py  simpler_evaluator_with_affordance.py
src/experiments/envs/simplerMS3/: pyproject.toml  simplerMS3_evaluator.py
src/experiments/policies/: policy_wrapper.py
src/experiments/policies/magma_policy_server/: pyproject.toml
src/experiments/policies/octo_policy_server/: pyproject.toml
src/model/magma/: configuration_magma.py  modeling_magma.py
src/model/octo/: configuration_octo.py  modeling_octo.py
src/model/spatialvla/: configuration_spatialvla.py  modeling_spatialvla.py
src/utils/: affordance_utils.py  decorator.py  geometry.py  metric.py  monitor.py  optim.py  pipeline.py  spec.py
