[project]
name = "simpler-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "draccus",
    "policy-server-client",
    "simpler-env",
    "mani-skill2-real2sim",
    "pytest>=8.3.5",
    "tensorflow>=2.15.0",
    # # maniskill dependencies
    "numpy<=1.26.4", # it's important to use pre-2.0 numpy. 2.0 has breaking changes and lots of donwstream packages haven't updated yet
    # # Simpler dependencies
    "transformers>=4.48.3",
]

[tool.uv.sources]
dlimp = {git = "https://github.com/kvablack/dlimp", rev = "d08da3852c149548aaa8551186d619d87375df08"}
simpler-env = { path = "../../../../third_party/SimplerEnv", editable = true }
mani-skill2-real2sim = { path = "../../../../third_party/ManiSkill2_real2sim", editable = true }
policy-server-client = { path = "../../../../packages/policy-server-client", editable = true }
lerobot = { path = "../../../../third_party/lerobot", editable = true }
